# voice_assistant

./: .gitignore  .gitmodules  Cargo.toml
src/: main.rs
