[package]
name = "voice_assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
openai_rs = { path = "./OpenAI-Rust" }
elevenlabs_rs = { path = "./elevenlabs-api-rust" }
tokio = "1.26.0"
rodio = "0.17.1"

[profile.release]
split-debuginfo = "packed"
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1
